{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 108,
  "lineage": "5595e3ba-8edd-19a4-83cd-8ee3796a926d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:981040552737:instance/i-0f2229f6a8ec4ecb7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2229f6a8ec4ecb7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073333ba507ce1f76",
            "private_dns": "ip-172-31-95-36.ec2.internal",
            "private_ip": "172.31.95.36",
            "public_dns": "ec2-44-201-145-244.compute-1.amazonaws.com",
            "public_ip": "44.201.145.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03b8f11ad1af9ef94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0799426e5a9221fe8",
            "tags": {
              "name": "dev_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b8c45af986c3a36"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:981040552737:instance/i-090988b84ee5bf22e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090988b84ee5bf22e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bb7b6f188199de9b",
            "private_dns": "ip-172-31-80-70.ec2.internal",
            "private_ip": "172.31.80.70",
            "public_dns": "ec2-18-234-221-100.compute-1.amazonaws.com",
            "public_ip": "18.234.221.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02f02ac699c8b8b40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0799426e5a9221fe8",
            "tags": {
              "name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b8c45af986c3a36"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0568773882d492fc8",
            "arn": "arn:aws:ec2:us-east-2:981040552737:instance/i-009a00b44dd67e228",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009a00b44dd67e228",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0704a9b1c9e9a42b8",
            "private_dns": "ip-172-31-32-127.us-east-2.compute.internal",
            "private_ip": "172.31.32.127",
            "public_dns": "ec2-18-219-245-214.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.245.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0202f5fde83bb14cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-us-east-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3c438570",
            "tags": {
              "name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bc78a21559b7427"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homolog",
            "aws_security_group.acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0568773882d492fc8",
            "arn": "arn:aws:ec2:us-east-2:981040552737:instance/i-0427b274700d3a879",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0427b274700d3a879",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0842a24f30654b8d7",
            "private_dns": "ip-172-31-35-7.us-east-2.compute.internal",
            "private_ip": "172.31.35.7",
            "public_dns": "ec2-18-118-147-193.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.147.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04190968dca24fc43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-us-east-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3c438570",
            "tags": {
              "name": "dev7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bc78a21559b7427"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homolog",
            "aws_security_group.acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981040552737:security-group/sg-06b8c45af986c3a36",
            "description": "Configura o acesso SSH",
            "egress": [],
            "id": "sg-06b8c45af986c3a36",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.131.133.120/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": null,
            "owner_id": "981040552737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Acesso-SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7f441c3d8cde692"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:981040552737:security-group/sg-02bc78a21559b7427",
            "description": "Configura o acesso SSH",
            "egress": [],
            "id": "sg-02bc78a21559b7427",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.131.133.120/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh-us-east-2",
            "name_prefix": null,
            "owner_id": "981040552737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Acesso-SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-e091a888"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}